# jobalert

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-report.yml  search.yml
job_agent/: __init__.py  config.py  filters.py  gmail_reader.py  logging_setup.py  main.py  models.py  parser.py  reporter.py  storage.py
linkedin_gmail_job_alert_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
results/: active_candidates.csv  active_candidates.json  daily_report.json  fetch_diagnostics.json  opportunities.csv
tests/: test_filters.py  test_parser_storage.py
