[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-gmail-job-alert-agent"
version = "0.1.0"
description = "Gmail-based LinkedIn job alert filter and reporter"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv==1.0.1",
]

[project.optional-dependencies]
test = [
  "pytest==8.2.2",
]

[tool.setuptools.packages.find]
include = ["job_agent*"]

